# ecst

./: .clang-format  .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CODE_SAMPLE.md  README.md
cmake/: Findecst.cmake
example/: CMakeLists.txt  boilerplate.hpp  c  c_debug  c_debug0  c_san  cf2  cf2_clang  cf2_msys  cf2_primus  cf2_primus_clang  cf2_profile  cf_valgrind  cfast_profile  ecst_camomilla.sh  ecst_camomilla_config.json  particles.cpp  pres_code.cpp  pres_code_new.cpp  simplify_error.py
example/boilerplate/: app.hpp  app_runner.hpp
example/utils/: dependencies.hpp  pres_game_app.hpp  pres_utils.hpp  trig.hpp
include/: ecst.hpp
include/ecst/: aliases.hpp  config.hpp  context.hpp  ctx.hpp  debug.hpp  hardware.hpp  inner_par.hpp  inner_parallelism.hpp  make_inl.hpp  mp.hpp  settings.hpp  sig.hpp  sig_list.hpp  signature.hpp  signature_list.hpp  sys_exec.hpp  system_execution_adapter.hpp  tag.hpp  thread_pool.hpp  utils.hpp
include/ecst/aliases/: assert.hpp  attributes.hpp  bitset.hpp  dense_bitset.hpp  hana.hpp  likely_unlikely.hpp  threading.hpp  vrmc.hpp
include/ecst/aliases/threading/: boost.hpp  std.hpp
include/ecst/config/: names.hpp
include/ecst/config/names/: context.hpp  debug.hpp  function_queue.hpp  global.hpp  hardware.hpp  inner_parallelism.hpp  mp.hpp  scheduler.hpp  settings.hpp  signature.hpp  signature_list.hpp  system_execution_adapter.hpp  system_ids_context.hpp  tag.hpp
include/ecst/context/: bitset.hpp  context.hpp  scheduler.hpp  system.hpp
include/ecst/context/bitset/: bits.hpp  builder.hpp  data.hpp
include/ecst/context/data/: data.hpp  defer.hpp  main_storage.hpp  make.hpp  step.hpp
include/ecst/context/entity/: handle.hpp  metadata.hpp
include/ecst/context/scheduler/: atomic_counter.hpp
include/ecst/context/storage/: component.hpp  entity.hpp  system.hpp
include/ecst/context/system/: instance.hpp  runner.hpp
include/ecst/context/types/: types.hpp
include/ecst/ctx/: bitset.hpp  data.hpp  entity.hpp  storage.hpp  system.hpp  types.hpp
include/ecst/ctx/bitset/: bits.hpp  builder.hpp  data.hpp
include/ecst/ctx/data/: defer.hpp  make.hpp  system_manager.hpp
include/ecst/ctx/entity/: constants.hpp
include/ecst/ctx/storage/: component.hpp  system.hpp
include/ecst/ctx/system/: state.hpp
include/ecst/ctx/types/: types.hpp
include/ecst/debug/: log.hpp
include/ecst/debug/log/: elog.hpp  impl.hpp  interface.hpp
include/ecst/hardware/: status.hpp
include/ecst/hardware/status/: core_count.hpp
include/ecst/inner_par/: types.hpp
include/ecst/inner_par/strategy/: split_evenly.hpp  split_evenly_fn.hpp  split_every_n.hpp
include/ecst/inner_par/types/: executor_type.hpp
include/ecst/inner_par/utils/: execute_split.hpp
include/ecst/inner_parallelism/: composer.hpp  strategy.hpp  utils.hpp
include/ecst/inner_parallelism/composer/: fixed_threshold.hpp  none_below_threshold.hpp
include/ecst/inner_parallelism/strategy/: none.hpp  split_evenly.hpp  split_evenly_fn.hpp  split_every_n.hpp
include/ecst/inner_parallelism/types/: executor_type.hpp
include/ecst/inner_parallelism/utils/: execute_split.hpp
include/ecst/make_inl/: settings_make.inl  sig_component_make.inl  sig_system_make.inl  signature_component_make.inl  signature_system_make.inl
include/ecst/mp/: core.hpp  list.hpp  minmax.hpp  opt_map.hpp  option_map.hpp
include/ecst/mp/core/: aliases.hpp  comparers.hpp  conjunction.hpp  is_specialization_of.hpp  negate.hpp  static_and.hpp  static_or.hpp  type_wrapper.hpp
include/ecst/mp/list/: basic.hpp  comparison.hpp  contains.hpp  count.hpp  find.hpp  fold.hpp  index_list.hpp  inverse_indices.hpp  is_list.hpp  mutate.hpp  pick.hpp  remove.hpp  (+6 more)
include/ecst/settings/: data.hpp  data_settings.hpp  make.hpp  str.hpp
include/ecst/sig/: component.hpp  system.hpp
include/ecst/sig_list/: component.hpp  system.hpp
include/ecst/signature/: component.hpp  system.hpp
include/ecst/signature_list/: component.hpp  system.hpp
include/ecst/sys_exec/: impl.hpp  interface.hpp
include/ecst/system_execution_adapter/: all.hpp  interface.hpp  tag.hpp
include/ecst/tag/: component.hpp  system.hpp
include/ecst/thread_pool/: aliases.hpp  third_party.hpp  thread_pool.hpp
include/ecst/utils/: alignment.hpp  cv_operations.hpp  do_nothing.hpp  function_queue.hpp  macros.hpp  movable_atomic.hpp  operation_macros.hpp  scope_guard.hpp  sparse_int_set.hpp  specialized_names.hpp  to_kill_set_wrapper.hpp
old/: simd_ideas.cpp  simd_storage.cpp  system_execution_builder.cpp  type_erase_macro.cpp
old/example/: c3  cfast  cfast_profile  cfastclang  particles_wrender.cpp  run_linux  run_linux_gcc  test_concurrency.cpp
old/experiments/: callback_chain.cpp  dag_transf.cpp  mingw.sh  mt_options.cpp  processing.cpp  test_dag_algo.cpp  tp0.cpp  tp1.cpp  tp2.cpp
old/ideas/: better_interface.cpp  configs.cpp  dag.txt  handles_dataraces.cpp  physics_collision.cpp  system_execution_syntax.cpp  system_ownership.cpp  tdd.cpp
old/include/mp/: adjacency_list.hpp  edge.hpp  map.hpp  pair.hpp
test/: CMakeLists.txt
test/basic/: should_pass.cpp
test/ecst/: c_debug  c_debug0  cf2  cf2_clang  cf_valgrind  context.cpp  ctx.cpp  defer_fns.cpp  entity_add_del.cpp  handle_test.cpp  has_component.cpp  outer_consistency.cpp  parallel_start.cpp  particles_death.cpp  recursive_dependency_list.cpp  refresh_event_handling.cpp  settings_generator.hpp  verifytest
test/ecst/ctx_bitset/: ctx_bitset.cpp
test/ecst/handle/: construction.cpp
test/ecst/hardware/: status.cpp
test/ecst/mp/list/: basic.cpp  comparison.cpp  count.cpp  find.cpp  fold.cpp  index_list.cpp  inverse_indices.cpp  mutate.cpp  pick.cpp  remove.cpp  remove_matching.cpp  replace_at.cpp  slice.cpp
test/ecst/sig/component/: make.cpp
test/ecst/signature/component/: make.cpp  tag.cpp
test/ecst/sparse_int_set/: sparse_int_set.cpp
test/ecst/testbed/: b  c  c_gcc_gdb  cgcc  testbed.hpp
test/ecst/thread_pool/: csan  simple.cpp  simple2.cpp
test/ecst/utils/: alignment.cpp  function_queue.cpp  reverse_loop.cpp
test/utils/: test_utils.hpp
(+383 files in other folders)
